[gd_scene load_steps=3 format=3 uid="uid://dwwtlkbbnvcma"]

[ext_resource type="Script" path="res://weapons/ranged_weapon_instance.gd" id="1_ewxph"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kifmc"]
radius = 900.0

[node name="RangedWeaponInstance" type="Node2D"]
script = ExtResource("1_ewxph")

[node name="WeaponRadius" type="Area2D" parent="."]
unique_name_in_owner = true
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponRadius"]
shape = SubResource("CircleShape2D_kifmc")
debug_color = Color(0, 0.709804, 0.356863, 0.419608)

[node name="PivotPoint" type="Marker2D" parent="."]
unique_name_in_owner = true

[node name="AttackPoint" type="Marker2D" parent="PivotPoint"]
unique_name_in_owner = true
position = Vector2(95, 0)
